[BUGFIX] Fix speaker image in session list on mobile

--- a/src/app/session/session-item/session-item.component.scss
+++ b/src/app/session/session-item/session-item.component.scss
@@ -19,3 +19,7 @@ h3 {
     background: #e6e6e6;
   }
 }
+
+.session-info {
+  flex: 1;
+}
